# Card-Management

./: AGENTS.md  FEATURE_CONTRACT.md  README.md  review-loop.sh  rust-test.sh  sample_patients_7000.csv  sample_patients_7000_nocard.csv
.claude/plans/: clinic-card-management.plan.md
ai-context/: README.md  architecture.md  commands.md  data-model.md  license-system.md  workflows.md
clinic/: USER_GUIDE.md  package-lock.json  package.json
clinic/src/: App.css  App.tsx
clinic/src-tauri/: Cargo.toml  tauri.conf.json
clinic/src-tauri/src/: audit.rs  auth.rs  backup.rs  commands.rs  db.rs  import.rs  lib.rs  license.rs  main.rs  patient.rs
clinic/src/components/: BackupsScreen.tsx  DeletedScreen.tsx  EcDateInput.tsx  ImportScreen.tsx  LicenseScreen.tsx  LoginScreen.tsx  PatientForm.tsx  PrintCard.tsx  ReportsScreen.tsx  SearchScreen.tsx  SettingsScreen.tsx  SetupScreen.tsx
clinic/src/lib/: api.ts  ethiopian.test.ts  ethiopian.ts  patientView.ts
