[package]
name = "clinic"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clinic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# bundled-sqlcipher-vendored-openssl: compiles SQLCipher + a vendored OpenSSL so the
# DB is encrypted at rest with no system crypto dependency (needs Perl+NASM at build time).
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
chrono = "0.4"
# Auth / key-wrapping: master key wrapped per-user with AES-256-GCM under an
# Argon2id-derived key. No hand-rolled crypto.
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
# Spreadsheet import (xlsx/xls via calamine, csv via the csv crate).
calamine = "0.26"
csv = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

